--- a/Session4/MNIST_20K_Params-EVA6_Session_4.ipynb
+++ b/Session4/MNIST_20K_Params-EVA6_Session_4.ipynb
@@ -88,6 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Model Summary:\n",
       "----------------------------------------------------------------\n",
       "        Layer (type)               Output Shape         Param #\n",
       "================================================================\n",
@@ -120,7 +121,34 @@
       "Forward/backward pass size (MB): 0.37\n",
       "Params size (MB): 0.07\n",
       "Estimated Total Size (MB): 0.45\n",
-      "----------------------------------------------------------------\n"
+      "----------------------------------------------------------------\n",
+      "\n",
+      "\n",
+      "Model Architecture:\n",
+      "\n",
+      "\n",
+      "Net(\n",
+      "  (conv0): Conv2d(1, 8, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (bn0): BatchNorm2d(8, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (conv01): Conv2d(8, 8, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (bn01): BatchNorm2d(8, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (pool0): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (drop1): Dropout(p=0.1, inplace=False)\n",
+      "  (conv1): Conv2d(8, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (bn1): BatchNorm2d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (conv2): Conv2d(16, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (bn2): BatchNorm2d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (pool1): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (drop2): Dropout(p=0.1, inplace=False)\n",
+      "  (conv3): Conv2d(16, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (bn3): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (conv4): Conv2d(32, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (bn4): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (avgpool): AvgPool2d(kernel_size=7, stride=7, padding=0)\n",
+      "  (drop3): Dropout(p=0.1, inplace=False)\n",
+      "  (fc1): Linear(in_features=32, out_features=16, bias=True)\n",
+      "  (fc2): Linear(in_features=16, out_features=10, bias=True)\n",
+      ")\n"
      ]
     }
    ],
@@ -128,7 +156,10 @@
     "use_cuda = torch.cuda.is_available()\n",
     "device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
     "model = Net().to(device)\n",
-    "summary(model, input_size=(1, 28, 28))"
+    "print(\"Model Summary:\")\n",
+    "summary(model, input_size=(1, 28, 28))\n",
+    "print(\"\\n\\nModel Architecture:\\n\\n\")\n",
+    "print(model)"
    ]
   },
   {
