--- a/Session5/MNIST_10K_Params-EVA6_Session_5-Step0.ipynb
+++ b/Session5/MNIST_10K_Params-EVA6_Session_5-Step0.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "**Target:**  \n",
     "\n",
-    "Model with proper skeleton\n",
+    "Build a basic skeleton based on learnings from the lecture, which is easy to represent and understand and build on. As we have to bring it below 10K parameters and in less than 15 EPOCHS, lets start with a lightweight model\n",
     "\n",
     "**Results:**  \n",
     "Parameters: 8,512  \n",
