Updated files with target and analysis

--- a/Session5/MNIST_10K_Params-EVA6_Session_5-Step0.ipynb
+++ b/Session5/MNIST_10K_Params-EVA6_Session_5-Step0.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "**Target:**  \n",
     "\n",
-    "Build a basic skeleton based on learnings from the lecture, which is easy to represent and understand and build on. As we have to bring it below 10K parameters and in less than 15 EPOCHS, lets start with a lightweight model\n",
+    "Build a basic skeleton based on learnings from the lecture, which is easy to represent and understand and build on. As we have to bring it below 10K parameters and in less than 15 EPOCHS, lets start with a lightweight model.\n",
     "\n",
     "**Results:**  \n",
     "Parameters: 8,512  \n",
@@ -17,7 +17,10 @@
     "Best Test Accuracy: 98.99 (14th Epoch), 98.22 (15th Epoch)  \n",
     "\n",
     "**Analysis:**  \n",
-    "The model has been defined with all the convolutional layers, Batch Normalization, max pooling GAP and Fully Convolutional layers. Regularization has not been added. Adding dropout might reduce the overfitting, which we will try in the next step."
+    "The model has been defined with all the convolutional layers, Batch Normalization, max pooling, GAP and Fully Convolutional 1x1 layers. Regularization has not been added. \n",
+    "Although the training accuracy looks good, Model is overfitting. In the 15th epoch, we have observed over 0.8% difference between the train and test accuracies, suggesting overfitting.  \n",
+    "\n",
+    "I think we have achieved our goal of creating a good base model. Adding regularization in the form of dropout might help reduce the overfitting, which we will try in the next step."
    ]
   },
   {
