--- a/Session5/MNIST_10K_Params-EVA6_Session_5-Step1.ipynb
+++ b/Session5/MNIST_10K_Params-EVA6_Session_5-Step1.ipynb
@@ -9,15 +9,15 @@
     "\n",
     "**Target:**  \n",
     "\n",
-    "Model with proper skeleton and Regularization defined\n",
+    "Apply regularization to bring overfitting within acceptable range.\n",
     "\n",
     "**Results:**  \n",
     "Parameters: 8,512  \n",
     "Best Train Accuracy: 99.02  \n",
-    "Best Test Accuracy: 98.91 (13th Epoch), 98.66 (15th Epoch)  \n",
+    "Best Test Accuracy: 98.91 (13th Epoch), 98.66 (15th Epoch)\n",
     "\n",
     "**Analysis:**  \n",
-    "The model has been defined with all the convolutional layers, Batch Normalization, max pooling GAP and Fully Convolutional layers. Droput Regularization has been added. But the model still needs to learn more efficiently without overfitting, for which we can try Data Augmentation further."
+    "Droput Regularization(6%) has been added at the end of first and second convolution blocks (randomly). The model still needs to learn more efficiently without overfitting and to help the model identify the test images, for which we can try Data Augmentation."
    ]
   },
   {
