--- a/Session5/MNIST_10K_Params-EVA6_Session_5-Step2.ipynb
+++ b/Session5/MNIST_10K_Params-EVA6_Session_5-Step2.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "**Target:**  \n",
     "\n",
-    "Use Data Augmentation - Random Rotation of Training Images\n",
+    "Use Data Augmentation - Random Rotation of Training Images to help model identify images better while testing and also hopefully help reduce overfitting.\n",
     "\n",
     "**Results:**  \n",
     "Parameters: 8,512  \n",
@@ -17,8 +17,7 @@
     "Best Test Accuracy: 98.87 (14th Epoch), 98.35 (15th Epoch)  \n",
     "\n",
     "**Analysis:**  \n",
-    "After having tried drop put regularization in the previous step, the variation between training and test accuracies was still high. \n",
-    "Data Augmentation has helped to make model reduce the overfitting. But, to make the model even more consistent and efficient, we will try to work more on the optimizers in the next step."
+    "Data Augmentation has helped to make model reduce the overfitting. But, overall accuracy has reduced, which is acceptable for now."
    ]
   },
   {
