--- a/Session5/MNIST_10K_Params-EVA6_Session_5-Step3.ipynb
+++ b/Session5/MNIST_10K_Params-EVA6_Session_5-Step3.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "**Target:**  \n",
     "\n",
-    "Use LR scheduler - ReduceLROnPlateau\n",
+    "Use LR scheduler - ReduceLROnPlateau to dynamically update the Learning Rate. This should hopefully help us cross the accuracy of both testing and training beyond 99.*%.\n",
     "\n",
     "**Results:**  \n",
     "Parameters: 8,512  \n",
@@ -17,9 +17,7 @@
     "Best Test Accuracy: 99.41 (14th Epoch), 99.37 (15th Epoch)  \n",
     "\n",
     "**Analysis:**  \n",
-    "After having tried data augmentation in the previous step, the test accuracy couldn't go beyond 98.87%. So, now we have tried to make it more efficient by adding LR Scheduler.  \n",
-    "It helped in achieving test accuracy of 99.41% accuracy at the 14th epoch, but the accuracy went down at 15th epoch.  \n",
-    "To make the model even more consistent in terms of test accuracy, we will try to work more on the optimizers in the next step."
+    "Bringing in the LR scheduler has definitely helped in inceasing the training & test accuracy, and we even achieved our target of 99.41% in the 13th & 14th epochs, but the accuracy dropped down to 99.37% in the 15th epoch. "
    ]
   },
   {
