--- a/Session5/MNIST_10K_Params-EVA6_Session_5-Step4.ipynb
+++ b/Session5/MNIST_10K_Params-EVA6_Session_5-Step4.ipynb
@@ -9,16 +9,18 @@
     "\n",
     "**Target:**  \n",
     "\n",
-    "Update the Optimizer to Adam\n",
+    "Even after successive runs, the model failed to hold on after reaching the target of 99.4% test accuracy.  \n",
+    "Replace optimizer to see if Adam can help sustain the accuracy obtained.  \n",
     "\n",
     "**Results:**  \n",
     "Parameters: 8,512  \n",
     "Best Train Accuracy: 99.45  \n",
     "Best Test Accuracy: 99.53 (14th Epoch), 99.49 (15th Epoch)\n",
     "\n",
-    "**Analysis:**  \n",
-    "After trying the LR Scheduler on SGD in the previous step, the test accuracy couldn't sustain consistently. So, now we have tried to make it effective by replacing the SGD with Adam optimizer.  \n",
-    "It helped in achieving around 99.5% accuracy consistently over the last 3 epochs (13,14 & 15)."
+    "**Analysis:** \n",
+    "\n",
+    "The usage of Adam optimizer in place of SGD has proved useful not only in achieving the target of 99.4%, but also pushed it a bit closer to 99.5% consistently over the last 3 epochs (13,14 & 15).  \n",
+    "This is where we stop our experiment."
    ]
   },
   {
