--- a/Session5/MNIST_10K_Params-EVA6_Session_5-Step1.ipynb
+++ b/Session5/MNIST_10K_Params-EVA6_Session_5-Step1.ipynb
@@ -17,7 +17,7 @@
     "Best Test Accuracy: 98.91 (13th Epoch), 98.66 (15th Epoch)\n",
     "\n",
     "**Analysis:**  \n",
-    "Droput Regularization(6%) has been added at the end of first and second convolution blocks (randomly). The model still needs to learn more efficiently without overfitting and to help the model identify the test images, for which we can try Data Augmentation."
+    "Droput Regularization(6%) has been added at the end of first and second convolution blocks (randomly), which helped reduce overfitting as expected. The model still needs to learn more efficiently without overfitting and to help the model identify the test images, for which we can try Data Augmentation."
    ]
   },
   {
